--- a/contents/blog/_metadata.yml
+++ b/contents/blog/_metadata.yml
@@ -3,3 +3,7 @@
 # freeze computational output
 # (see https://quarto.org/docs/projects/code-execution.html#freeze)
 freeze: auto
+execute: 
+  echo: true
+  warning: false
+
