--- a/contents/blog/_metadata.yml
+++ b/contents/blog/_metadata.yml
@@ -2,7 +2,7 @@
 
 # freeze computational output
 # (see https://quarto.org/docs/projects/code-execution.html#freeze)
-freeze: auto
+freeze: false
 execute: 
   echo: true
   warning: false
