--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,7 +44,7 @@ website:
       - icon: linkedin
         href: https://www.linkedin.com/in/pingfan/
       - icon: github
-        href: https://github.com/pingfan0727
+        href: https://github.com/pingfan-hu
       - icon: envelope-at
         href: mailto:pingfan.hu@gwu.edu
 
