--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,4 +1,5 @@
 editor: visual
+page-layout: article
 
 project:
   type: website
@@ -6,6 +7,7 @@ project:
 format:
   html:
     toc: true
+    toc-depth: 5
     toc-location: right
     theme: [united, theme.scss]
     css: styles.css
@@ -13,6 +15,16 @@ format:
     link-external-newwindow: true
     link-external-icon: false
     backgroundcolor: "#F8F7F0"
+
+knitr: 
+  opts_chunk: 
+    comment: "#>"
+    fig.align: "center"
+    fig.show: "hold"
+    fig.asp: 0.618
+    fig.retna: 3
+    fig.path: figs_auto/
+    out.width: 70%
 
 execute:
   freeze: false
@@ -51,8 +63,3 @@ website:
         href: https://github.com/pingfan-hu
       - icon: envelope-at
         href: mailto:pingfan.hu@gwu.edu
-
-
-
-
-
