--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,7 +23,7 @@ knitr:
     fig.show: "hold"
     fig.asp: 0.618
     fig.retna: 3
-    fig.path: figs_auto/
+    fig.path: figs/
     out.width: 70%
 
 execute:
