--- a/_quarto.yml
+++ b/_quarto.yml
@@ -70,9 +70,16 @@ website:
     right:
       - icon: linkedin
         href: https://www.linkedin.com/in/pingfan/
+        target: _blank
       - icon: github
         href: https://github.com/pingfan-hu
-      - text: "<span class='about-link-text'><i class='ai ai-orcid'></i></span>"
+        target: _blank
+      - text: "<i class='fa-brands fa-orcid'></i>"
         href: https://orcid.org/0009-0001-4877-4844
+        target: _blank
+      - text: "<i class='fa-brands fa-google-scholar'></i>"
+        href: https://scholar.google.com/citations?hl=en&user=cHRn7ysAAAAJ&view_op=list_works&gmla=AOv-ny_SNvl4HxALL_saOPSbgciX2yIEDuqGz8VcwqjeV8_KIsvS3Clzw9UsU0HyvsfVAVgU_yJO2NLq6vLT1IL2
+        target: _blank
       - icon: envelope-at
         href: mailto:pingfan.hu@gwu.edu
+        target: _blank
