--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,7 @@ format:
     self-contained: true
     link-external-newwindow: true
     link-external-icon: false
+    code-copy: true
     backgroundcolor: "#F8F7F0"
 
 knitr: 
