--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,7 +1,13 @@
-page-layout: article
-
 project:
   type: website
+  output-dir: _site
+  preview:
+    port: 5678
+    browser: true
+  render:
+    - "**/*.qmd"
+  resources:
+    - "pdf/"
 
 format:
   html:
