--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,8 @@ jobs:
     - name: Install quarto
       uses: quarto-dev/quarto-actions/setup@v2
       
-    - name: Install R dependencies
-      run: |
-        install.packages(c("rmarkdown", "quarto"))
-      shell: Rscript {0}
+    - name: Set up R dependencies with renv
+      uses: r-lib/actions/setup-renv@v2
       
     - name: Render Quarto website
       run: |
