--- a/_quarto.yml
+++ b/_quarto.yml
@@ -64,8 +64,7 @@ format:
     toc-depth: 5
     toc-location: right
     lightbox: true
-    theme: [united, theme/theme.scss]
-    css: theme/styles.css
+    theme: [united, theme.scss]
     self-contained: true
     link-external-newwindow: true
     link-external-icon: false
