--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,8 @@ jobs:
     - name: Install quarto
       uses: quarto-dev/quarto-actions/setup@v2
       
-    - name: Install R dependencies
-      run: |
-        install.packages(c("rmarkdown", "quarto", "tidyverse", "kableExtra", "here", "surveydown"))
-      shell: Rscript {0}
+    - name: Set up R dependencies with renv
+      uses: r-lib/actions/setup-renv@v2
       
     - name: Render Quarto website
       run: |
