--- a/projects/_metadata.yml
+++ b/projects/_metadata.yml
@@ -1,1 +1,8 @@
 image: "banner.png"
+include-in-header:
+  text: |
+    <style>
+    #title-block-header.quarto-title-block.default .quarto-title-meta {
+      display: none;
+    }
+    </style>
